Added current loans for dahsboard