@@ -1,6 +1,8 @@
 package id.co.bcaf.goceng.services;
 
 import id.co.bcaf.goceng.dto.CustomerResponse;
+import id.co.bcaf.goceng.dto.LoanResponse;
+import id.co.bcaf.goceng.dto.LoanUpdateRequest;
 import id.co.bcaf.goceng.exceptions.ResourceNotFoundException;
 import id.co.bcaf.goceng.models.Application;
 import id.co.bcaf.goceng.models.Customer;
@@ -8,8 +10,6 @@ import id.co.bcaf.goceng.models.Loan;
 import id.co.bcaf.goceng.models.LoanLog;
 import id.co.bcaf.goceng.repositories.LoanLogRepository;
 import id.co.bcaf.goceng.repositories.LoanRepository;
-import id.co.bcaf.goceng.dto.LoanResponse;
-import id.co.bcaf.goceng.dto.LoanUpdateRequest;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -17,7 +17,9 @@ import org.springframework.stereotype.Service;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -46,12 +48,10 @@ public class LoanService {
                 .status(Loan.LoanStatus.ACTIVE)
                 .build();
 
-
         return loanRepository.save(loan);
     }
 
     private BigDecimal calculateInstallment(BigDecimal principal, BigDecimal annualInterestRate, int tenorMonths) {
-        // Calculate monthly interest rate as decimal
         BigDecimal monthlyInterest = annualInterestRate.divide(BigDecimal.valueOf(12), 10, BigDecimal.ROUND_HALF_UP)
                 .divide(BigDecimal.valueOf(100), 10, BigDecimal.ROUND_HALF_UP);
 
@@ -60,7 +60,6 @@ public class LoanService {
         }
 
         BigDecimal onePlusR = BigDecimal.ONE.add(monthlyInterest);
-        // Use pow with positive exponent, calculate denominator as 1 - (1+r)^-tenor
         BigDecimal denominator = BigDecimal.ONE.subtract(onePlusR.pow(-tenorMonths, java.math.MathContext.DECIMAL128));
         BigDecimal numerator = principal.multiply(monthlyInterest);
 
@@ -71,7 +70,7 @@ public class LoanService {
         BigDecimal monthlyInstallment = calculateInstallment(loanAmount, interestRate, tenor);
 
         return LoanResponse.builder()
-                .id(null) // Not persisted yet
+                .id(null)
                 .customerId(customer.getIdCustomer())
                 .customerName(customer.getName())
                 .loanAmount(loanAmount)
@@ -81,8 +80,8 @@ public class LoanService {
                 .remainingTenor(tenor)
                 .remainingPrincipal(loanAmount)
                 .totalPaid(BigDecimal.ZERO)
-                .plafonType("Standard") // Example value
-                .plafonLimit(BigDecimal.valueOf(1_000_000)) // Example plafon limit
+                .plafonType("Standard")
+                .plafonLimit(BigDecimal.valueOf(1_000_000))
                 .createdAt(LocalDateTime.now())
                 .updatedAt(LocalDateTime.now())
                 .build();
@@ -104,10 +103,13 @@ public class LoanService {
     }
 
     private LoanResponse convertToResponse(Loan loan) {
+        var customer = loan.getCustomer();
+        var plafon = customer.getPlafon();
+
         return LoanResponse.builder()
                 .id(loan.getId())
-                .customerId(loan.getCustomer().getId())
-                .customerName(loan.getCustomer().getName())
+                .customerId(customer.getId())
+                .customerName(customer.getName())
                 .loanAmount(loan.getLoanAmount())
                 .tenor(loan.getTenor())
                 .installment(loan.getInstallment())
@@ -115,8 +117,9 @@ public class LoanService {
                 .remainingTenor(loan.getRemainingTenor())
                 .remainingPrincipal(loan.getRemainingPrincipal())
                 .totalPaid(loan.getTotalPaid())
-                .plafonType("Standard") // You may want to add dynamic logic here
-                .plafonLimit(BigDecimal.valueOf(1_000_000)) // Example limit, can be dynamic
+                .disbursedAt(loan.getDisbursedAt())
+                .plafonType(plafon != null ? plafon.getPlafonType() : null)
+                .plafonLimit(plafon != null ? plafon.getPlafonAmount() : null)
                 .createdAt(loan.getCreatedAt())
                 .updatedAt(loan.getUpdatedAt())
                 .build();
@@ -126,12 +129,12 @@ public class LoanService {
         return loanRepository.sumTotalLoanAmountByCustomer(customerId).orElse(BigDecimal.ZERO);
     }
 
-//    public List<LoanResponse> getLoanHistoryForCustomer(UUID customerId) {
-//        return loanRepository.findByCustomerId(customerId).stream()
-//                .map(this::convertToResponse)
-//                .toList();
-//    }
-
+    public List<LoanResponse> getLoansByCustomerId(UUID customerId) {
+        List<Loan> loans = loanRepository.findByCustomerId(customerId);
+        return loans.stream()
+                .map(this::convertToResponse)
+                .collect(Collectors.toList());
+    }
 
 
     public LoanResponse getLoanById(UUID loanId) {
@@ -140,12 +143,10 @@ public class LoanService {
         return convertToResponse(loan);
     }
 
-
     public List<LoanLog> getLoanLogs(UUID loanId) {
         return loanLogRepository.findByLoan_IdOrderByTimestampDesc(loanId);
     }
 
-    // Optional: Use this to track field changes if you want
     private void logChange(Loan loan, String field, String oldVal, String newVal, String username) {
         LoanLog log = LoanLog.builder()
                 .loan(loan)
@@ -164,6 +165,6 @@ public class LoanService {
         List<Loan> loans = loanRepository.searchLoansWithFilters(customerId, status, fromDate, toDate);
         return loans.stream()
                 .map(this::convertToResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
